--- a/CSS/Components/MainComponents/CustomerServiceSection/container.css
+++ b/CSS/Components/MainComponents/CustomerServiceSection/container.css
@@ -2,10 +2,10 @@
 {
     display:flex;
     background:var(--CS-bg-color);
-    margin-top:20px;
-    padding-bottom: 35px;
-    padding-left:40px;
-    padding-right:40px;
+    margin-top:10px;
+    padding-bottom: 30px;
+    padding-left:20px;
+    padding-right:20px;
     flex-direction: column;
     align-items: center;
     text-align: center;
