--- a/CSS/Components/MainComponents/CustomerServiceSection/p.css
+++ b/CSS/Components/MainComponents/CustomerServiceSection/p.css
@@ -3,6 +3,6 @@
     font-size: 14px;
     color: var(--CS-font-color);
     text-align: center;
-    max-width: 330px;
+    max-width: 360px;
     line-height: 1.45;
 }
